--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
 <h2>APLIKASI KALBUT ONLINE</h2>
 
+<!-- GIF dan Marquee -->
 <div class="banner-container">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgzich3Hily9DIQvWrNSeLIGstR7Q6Tz9QxHRRrQLGV1OzLgkKry28RSVUhYVooYE1o1opgm1goBdnwWW4BdG-ENQ_sWqXlx9Yw98Eds1UVlVaLXm2K9cPlD3q3F8rKoL3OgbZYQYVo3aaE_3ia2eMswcYhpOy6HWrb2-DOCBdIxcV7LZYdYwn5DqlMrA/s400/1000071308.gif" alt="Banner GIF">
   <div class="banner-text">
@@ -135,34 +136,19 @@
   <button onclick="openPopup('popupJaga')">Pilih Petugas Jaga</button>
 
   <label>Kantor Pelabuhan</label>
-  <select id="kantor">
-    <option value="aman">Aman</option>
-    <option value="tidak aman">Tidak Aman</option>
-  </select>
+  <select id="kantor"><option value="aman">Aman</option><option value="tidak aman">Tidak Aman</option></select>
 
   <label>Dermaga</label>
-  <select id="dermaga">
-    <option value="aman">Aman</option>
-    <option value="tidak aman">Tidak Aman</option>
-  </select>
+  <select id="dermaga"><option value="aman">Aman</option><option value="tidak aman">Tidak Aman</option></select>
 
   <label>Gudang Penyimpanan</label>
-  <select id="gudang">
-    <option value="aman">Aman</option>
-    <option value="tidak aman">Tidak Aman</option>
-  </select>
+  <select id="gudang"><option value="aman">Aman</option><option value="tidak aman">Tidak Aman</option></select>
 
   <label>Area Parkir Kendaraan</label>
-  <select id="parkir">
-    <option value="aman">Aman</option>
-    <option value="tidak aman">Tidak Aman</option>
-  </select>
+  <select id="parkir"><option value="aman">Aman</option><option value="tidak aman">Tidak Aman</option></select>
 
   <label>Kegiatan Pelabuhan</label>
-  <select id="kegiatan">
-    <option value="nihil">Nihil</option>
-    <option value="ada">Ada</option>
-  </select>
+  <select id="kegiatan"><option value="nihil">Nihil</option><option value="ada">Ada</option></select>
 
   <label>Keterangan Kegiatan</label>
   <textarea id="keterangan" placeholder="Isi jika ada kegiatan..."></textarea>
@@ -212,26 +198,33 @@ function getShift(jam) {
   return (hour >= 8 && hour < 20) ? "Pagi" : "Malam";
 }
 function getCuaca(callback) {
-  fetch("https://api.open-meteo.com/v1/forecast?latitude=-7.724&longitude=114.007&current=temperature_2m,weather_code,wind_speed_10m&timezone=auto")
-    .then(res => res.json())
-    .then(data => {
-      const suhu = data.current.temperature_2m + "°C";
-      const angin = data.current.wind_speed_10m + " km/jam";
-      const kodeCuaca = data.current.weather_code;
-      const kondisi = {
-        0: "Cerah", 1: "Sebagian Cerah", 2: "Berawan", 3: "Mendung",
-        45: "Berkabut", 48: "Kabut Es", 51: "Gerimis Ringan", 53: "Gerimis Sedang",
-        55: "Gerimis Lebat", 61: "Hujan Ringan", 63: "Hujan Sedang",
-        65: "Hujan Lebat", 66: "Hujan Beku Ringan", 67: "Hujan Beku Lebat",
-        71: "Salju Ringan", 73: "Salju Sedang", 75: "Salju Lebat",
-        80: "Hujan Lokal", 81: "Hujan Lokal Sedang", 82: "Hujan Lokal Lebat"
-      };
-      const cuacaDeskripsi = kondisi[kodeCuaca] || "Tidak diketahui";
-      callback(`${cuacaDeskripsi} (${suhu})`, angin);
-    })
-    .catch(() => {
-      callback("Tidak tersedia", "Tidak tersedia");
-    });
+  function fetchWeather(lat, lon) {
+    fetch(`https://marine-api.open-meteo.com/v1/marine?latitude=${lat}&longitude=${lon}&current=wave_height,wind_speed_10m,weather_code,temperature_2m&timezone=auto`)
+      .then(res => res.json())
+      .then(data => {
+        const suhu = data.current.temperature_2m + "°C";
+        const angin = data.current.wind_speed_10m + " km/jam";
+        const ombak = data.current.wave_height + " m";
+        const kodeCuaca = data.current.weather_code;
+        const kondisi = {
+          0: "Cerah", 1: "Sebagian Cerah", 2: "Berawan", 3: "Mendung",
+          45: "Berkabut", 48: "Kabut Es", 51: "Gerimis Ringan", 53: "Gerimis Sedang",
+          55: "Gerimis Lebat", 61: "Hujan Ringan", 63: "Hujan Sedang", 65: "Hujan Lebat"
+        };
+        const cuacaDeskripsi = kondisi[kodeCuaca] || "Tidak diketahui";
+        callback(`${cuacaDeskripsi} (${suhu})`, angin, ombak);
+      })
+      .catch(() => callback("Tidak tersedia", "-", "-"));
+  }
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(
+      pos => fetchWeather(pos.coords.latitude, pos.coords.longitude),
+      () => fetchWeather(-7.724, 114.007)
+    );
+  } else {
+    fetchWeather(-7.724, 114.007);
+  }
 }
 function kirimWhatsApp() {
   const now = new Date();
@@ -248,32 +241,31 @@ function kirimWhatsApp() {
   const kegiatan = document.getElementById("kegiatan").value;
   const keterangan = document.getElementById("keterangan").value.trim() || "nihil";
 
-  getCuaca((cuaca, angin) => {
+  getCuaca((cuaca, angin, ombak) => {
     const isi =
 `*LAPORAN PENGAWASAN AREA PELABUHAN KALBUT* 
-*Hari/Tanggal*  : ${tgl}  
+*Hari/Tanggal*: ${tgl}  
 *Nama Petugas Piket*: ${piket}
 *Nama Petugas Jaga*: ${jaga}  
 *Shift*: ${shift}  
 *Jam*: ${jam}  
-*Info Cuaca*: ${cuaca}  
-*Kecepatan Angin*: ${angin}  
+*Cuaca*: ${cuaca}  
+*Angin*: ${angin}  
+*Ketinggian Ombak*: ${ombak}
+
 *AREA YANG DIPANTAU*
+- Kantor Pelabuhan: [${kantor}]
+- Dermaga: [${dermaga}]
+- Gudang Penyimpanan: [${gudang}]
+- Area Parkir Kendaraan: [${parkir}]
+- Kegiatan Pelabuhan: [${kegiatan}]  
 
-Daftar Lokasi Pengawasan / Patroli:
-- Kantor Pelabuhan [${kantor}]
-- Dermaga [${dermaga}]
-- Gudang Penyimpanan [${gudang}]
-- Area Parkir Kendaraan [${parkir}]
-- Kegiatan Pelabuhan [${kegiatan}]  
-
-*KETERANGAN KEGIATAN*:  
+*KETERANGAN KEGIATAN*  
 ${kegiatan === "ada" ? keterangan : "nihil"}
 
-_Pesan laporan dikirim dari pesan otomatis by Kalbut.Online_`;
+_Pesan ini dikirim otomatis oleh Kalbut Online_`;
 
-    const encoded = encodeURIComponent(isi);
-    const waURL = `https://wa.me/?text=${encoded}`;
+    const waURL = `https://wa.me/?text=${encodeURIComponent(isi)}`;
     window.open(waURL, "_blank");
   });
 }
