--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <div class="banner-container">
   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgzich3Hily9DIQvWrNSeLIGstR7Q6Tz9QxHRRrQLGV1OzLgkKry28RSVUhYVooYE1o1opgm1goBdnwWW4BdG-ENQ_sWqXlx9Yw98Eds1UVlVaLXm2K9cPlD3q3F8rKoL3OgbZYQYVo3aaE_3ia2eMswcYhpOy6HWrb2-DOCBdIxcV7LZYdYwn5DqlMrA/s400/1000071308.gif" alt="Banner GIF">
   <div class="banner-text">
-    <marquee scrollamount="5">VERSI 4 - SEMANGAT BERTUGAS! | PASTIKAN AREA AMAN | LAPORAN WAJIB SETIAP SHIFT</marquee>
+    <marquee scrollamount="5">VERSI 4 - ● Ijinkan akses lokasi agar bisa mengambil data ombak secara real ●SEMANGAT BERTUGAS! | PASTIKAN AREA AMAN | LAPORAN WAJIB SETIAP SHIFT</marquee>
   </div>
 </div>
 
