--- a/index.html
+++ b/index.html
@@ -257,8 +257,10 @@ function kirimWhatsApp() {
 *Hari/Tanggal*: ${tgl}
 *Jam*: ${jam}
 *Shift*: ${shift}
-*Petugas Piket*: ${piket}
-*Petugas Jaga*: ${jaga}
+*Petugas Piket*:
+${piket}
+*Petugas Jaga*:
+${jaga}
 *Cuaca*: ${cuaca}
 *Angin*: ${angin}
 *Ketinggian Ombak*: ${ombak}
